fixed some css spacing in the dm window, added some notes, edited message deletemodal in message compoenent for dms

--- a/react-app/src/components/DmWindow/DmWindow.css
+++ b/react-app/src/components/DmWindow/DmWindow.css
@@ -37,7 +37,7 @@
     align-items: center;
     justify-content: center;
     text-overflow: ellipsis;
-    padding: 5px;
+    padding: 7px;
 }
 
 .dm-lists{
